thirdparty/boost/libs/range/test/compile_fail/.uuid
21fc106d-19f5-4b08-ae62-ec7c5cb29b66